# youtube-analytics-project

./: pyproject.toml  requirements.txt
helper/: youtube_api_manual.py
homework-3/: main.py
src/: channel.py  video.py
